# 3dvr-cloud

./: LICENSE  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  ROADMAP.md
people-cloud/: .gitignore
people-cloud/dashboard/: index.html
people-cloud/node/: Cargo.toml  Dockerfile
people-cloud/node/src/: main.rs
people-cloud/protocols/: spec.md
scripts/: dev.sh
