[package]
name = "people-cloud-node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30", features = ["multithread"] }
anyhow = "1"